# xml_extractor

./: README.md  pyproject.toml
data/: test.txt  test_2.txt
my_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xml_extractor.egg-info/: PKG-INFO  SOURCES.txt
xml_package/: extractor.py
