[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xml_extractor"
version = "0.1.0"
description = "UV-enabled Python project for extracting doc-numbers from XML or ZIP files"
authors = [
    { name = "Reena Turak", email = "reenaturak@gmail.com" }
]
dependencies = [
    # No runtime dependencies needed; standard library suffices
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",            # for running tests
    "pytest-cov>=4.0"         # optional coverage reports
]

[tool.setuptools]
packages = ["xml_package"]    # include only this package, ignore others

[tool.uv]
